Big change just to run BidServiceTest